# More docs at https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
# Most of project config is done here

[metadata]
name = pywebodm
version = attr: pywebodm.VERSION
author = Sandro Klippel
author_email = sandroklippel@gmail.com
description = Python library for interacting with the WebODM API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sandroklippel/pywebodm
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

# Add project requirements below
install_requires =
    requests
    requests-toolbelt


[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pywebodm = pywebodm.main:main
